--- a/hosts.ini
+++ b/hosts.ini
@@ -1,26 +1,34 @@
 
 [staging_servers]
-linux_server1     ansible_host=192.168.240.149   ansible_user=server1 ansible_ssh_private_key_file=/home/server1/.ssh/authorized_keys.pem
+linux_server1     ansible_host=192.168.240.149     
+
+
+
 
 
 [staging_DB]
-linux_server2     ansible_host=192.168.240.146   ansible_user=server2 ansible_ssh_private_key_file=/home/server2/.ssh/authorized_keys.pem
+linux_server2     ansible_host=192.168.240.146     
+
 
 
 [staging_web]
-linux_server3     ansible_host=192.168.240.147   ansible_user=server3 ansible_ssh_private_key_file=/home/server3/.ssh/authorized_keys.pem
+linux_server3     ansible_host=192.168.240.147    
+
+
+
+[staging_APP]
+linux_server4     ansible_host=192.168.240.145   ansible_user=server4  ansible_ssh_private_key_file=/home/server4/.ssh/authorized_keys.pem  ansible_become=yes  ansible_become_password=55555e
+linux_server5     ansible_host=192.168.240.144   
+
+
+[prod_servers]
+linux_server6     ansible_host=192.168.240.143   ansible_user=server6    ansible_ssh_private_key_file=/home/server6/.ssh/authorized_keys.pem ansible_become=yes  ansible_become_password=55555t
+linux_server7     ansible_host=192.168.240.142   
+
 
 [staging_ALL:children]
 staging_servers
 staging_DB
 staging_web
-
-[staging_APP]
-linux_server4     ansible_host=192.168.240.145   ansible_user=server4 ansible_ssh_private_key_file=/home/server4/.ssh/authorized_keys.pem
-linux_server5     ansible_host=192.168.240.144   ansible_user=server5 ansible_ssh_private_key_file=/home/server5/.ssh/authorized_keys.pem
-
-
-
-[prod_servers]
-linux_server6     ansible_host=192.168.240.143   ansible_user=server6 ansible_ssh_private_key_file=/home/server6/.ssh/authorized_keys.pem
-linux_server7     ansible_host=192.168.240.142   ansible_user=server7 ansible_ssh_private_key_file=/home/server7/.ssh/authorized_keys.pem 
+staging_APP
+prod_servers
