--- a/Apache_Installing.yml
+++ b/Apache_Installing.yml
@@ -29,6 +29,8 @@
   handlers:
   - name: Restart Apache RedHat
     service: name=httpd state=restarted 
+    when: ansible_os_family == "RedHat"
 
   - name: Restart Apache Debian
     service: name=apache2 state=restarted 
+    when: ansible_os_family == "Debian"
