--- a/roles/deploy_apache_web/tasks/main.yml
+++ b/roles/deploy_apache_web/tasks/main.yml
@@ -1,17 +1,8 @@
 ---
-- name: Install Apache and Upload Web Page
-  hosts: staging_web
-  become: yes
-  
-  vars: 
-    source_folder: ./MyWebSite
-    destin_folder: /var/www/html
-    
+# tasks file for deploy_apache_web
 
-  tasks:
   - name: LINUX version 
     debug: var=ansible_os_family 
-
 
   - block:   #     ======block for REDHAT=======
 
@@ -33,14 +24,15 @@
      
     when: ansible_os_family == "Debian"
 
+  - name: Generate Index.html file  ###замена файла и добавление переменных на веб
+    template: src=index.j2 dest={{ destin_folder }}//index.html  mode=0555
+  
+
   - name: Copy HomePage to Servers ###копирование файла на сервер
-    copy: src={{ source_folder }}/{{ item }} dest={{ destin_folder }}  mode=0555
+    copy: src={{ item }} dest={{ destin_folder }}  mode=0555
  
  
    # with_fileglob: "{{ source_folder }}"/*.*     # скопировать всё 1 способ
- 
- 
- 
  
   #   loop:                          #копирование файлов   2 способ 
   #     - "index.html"
@@ -50,12 +42,3 @@
     notify: 
        - Restart Apache RedHat        ###Для хандлерс перезагрузка по команде 
        - Restart Apache Debian
-       
-  handlers:
-    - name: Restart Apache RedHat     # перезагрузка
-      service: name=httpd state=restarted 
-      when: ansible_os_family == "RedHat"
-
-    - name: Restart Apache Debian     # перезагрузка
-      service: name=apache2 state=restarted 
-      when: ansible_os_family == "Debian"
