--- a/hosts.ini
+++ b/hosts.ini
@@ -2,28 +2,34 @@
 [staging_servers]
 linux_server1     ansible_host=192.168.240.149     
 
-
-
-
-
 [staging_DB]
 linux_server2     ansible_host=192.168.240.146     
-
-
 
 [staging_web]
 linux_server3     ansible_host=192.168.240.147    
 
 
 
+
+
 [staging_APP]
-linux_server4     ansible_host=192.168.240.145   ansible_user=server4  ansible_ssh_private_key_file=/home/server4/.ssh/authorized_keys.pem  ansible_become=yes  ansible_become_password=55555e
 linux_server5     ansible_host=192.168.240.144   
 
+[staging_APP2]
+linux_server4     ansible_host=192.168.240.145
 
-[prod_servers]
-linux_server6     ansible_host=192.168.240.143   ansible_user=server6    ansible_ssh_private_key_file=/home/server6/.ssh/authorized_keys.pem ansible_become=yes  ansible_become_password=55555t
+
+
+
+
+
+[prod_servers]  
 linux_server7     ansible_host=192.168.240.142   
+
+[prod_server2]
+linux_server6     ansible_host=192.168.240.143 
+
+
 
 
 [staging_ALL:children]
@@ -31,4 +37,6 @@ staging_servers
 staging_DB
 staging_web
 staging_APP
+staging_APP2
 prod_servers
+prod_server2
