--- a/hosts.ini
+++ b/hosts.ini
@@ -1,42 +1,23 @@
 
-[staging_servers]
-linux_server1     ansible_host=192.168.240.149     
+[monitoring]
+monitoring_server    ansible_host=192.168.240.140   
 
-[staging_DB]
-linux_server2     ansible_host=192.168.240.146     
+[jenkins]
+Jenkins_server     ansible_host=192.168.240.139     
 
-[staging_web]
-linux_server3     ansible_host=192.168.240.147    
-
-
-
-
-
-[staging_APP]
-linux_server5     ansible_host=192.168.240.144   
-
-[staging_APP2]
-linux_server4     ansible_host=192.168.240.145
+[web]
+Web_server     ansible_host=192.168.240.138   
 
 
 
 
 
 
-[prod_servers]  
-linux_server7     ansible_host=192.168.240.142   
-
-[prod_server2]
-linux_server6     ansible_host=192.168.240.143 
 
 
 
 
 [staging_ALL:children]
-staging_servers
-staging_DB
-staging_web
-staging_APP
-staging_APP2
-prod_servers
-prod_server2
+monitoring
+jenkins
+web
