--- a/roles/node-exporter/meta/main.yml
+++ b/roles/node-exporter/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: Tikhon 
-  description: Admin
-  company: ---
+  author: your name
+  description: your role description
+  company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
